trunk/OldArchive/28903d05b8/output
main.cpp:2:2: error: ‘string’ in namespace ‘std’ does not name a type
  std::string rangeToString(Iterator begin, Iterator end, Delimiter prefix, Delimiter suffix, Delimiter separator)
  ^
